		Can be used to determine the neighbors of a room before even placing it.
		Note that this does not give you any signal of if a room would actually fit, or if the neighbors would even allow a connection.
* StatsMenu:
	- SetSelectedElement(int element)
	- GetSelectedElement() - int
* Room:
	- GetLRoom[Area/Tile]Desc() now return a usable class
* LRoomAreaDesc:
	- Describes the corners of an L-room shape (as divided horizontally into two rectangles), in worldspace
	- Get[High/Low][TopLeft/BottomRight]() (returns Vector)
* LRoomTileDesc:
	- Describes the corners of an L-room shape (as divided horizontally into two rectangles), in grid coordinates
	- Get[High/Low][TopLeft/BottomRight]() (returns int[2])
	- Can use Room:GetGridIndexByTile() to retrieve grid idx at these coordinates
* RoomDescriptor:
	- GetDimension() - int
	- GetNeighboringRooms()
		Returns a table map of DoorSlot->RoomDescriptor. Don't use ipairs!
* ItemConfigCard:
	- Added weight and hidden parameter to cards, both can be specified in pocketitems.xml
	- Added the ability to specify a custom "availability condition" to evaluate when the game checks if a card is available.
	- Hidden
	- InitialWeight
	- Weight - can be modified
	- GetAvailabilityCondition()
	- SetAvailabilityCondition(function)
	- ClearAvailabilityCondition()
* Sprite:
	- SetOverlayLayerFrame(int Layer, int Frame) - SetLayerFrame for overlays
	- GetLayerFrameData(int Layer) - Returns the current AnimationFrame for the given layer.
	- GetOverlayLayerFrameData(int Layer) - Same as above for the overlay animation.
* AnimationFrame:
	- GetStartFrame()
	- GetEndFrame()
* Point:
	- [Get/Set]Color() - Allows setting a color per-Point; colors are lerped between points
	- [Get/Set]IsWorldSpace() - Automatically converts this Point's position from worldspace to screenspace when rendering
* PersistentGameData:
	- AddBestiaryKill(EntityType, Variant = 0)
	- AddBossKilled(BossType)
	- IsBossKilled(BossType)
* EntityPlayer:
	- GetMaxCoins() - int