@@ -27,12 +27,14 @@ Additions:
 	- GetSelectedElement() - int
 * Room:
 	- GetLRoom[Area/Tile]Desc() now return a usable class
+	- GetGridIndexByTile() now accepts a table of int[2]
 * LRoomAreaDesc:
 	- Describes the corners of an L-room shape (as divided horizontally into two rectangles), in worldspace
-	- Get[High/Low][TopLeft/BottomRight]() (returns Vector)
+	- Vector Get[High/Low][TopLeft/BottomRight]()
 * LRoomTileDesc:
 	- Describes the corners of an L-room shape (as divided horizontally into two rectangles), in grid coordinates
-	- Get[High/Low][TopLeft/BottomRight]() (returns int[2])
+	- int[2] Get[High/Low][TopLeft/BottomRight]()
+	- int[2] GetRandomTile(Seed)
 	- Can use Room:GetGridIndexByTile() to retrieve grid idx at these coordinates
 * RoomDescriptor:
 	- GetDimension() - int
